tests/e2e/gateway-deployment/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg-deployment-test
spec:
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd
            weight: 1
      containers:
      - envFrom:
        - configMapRef:
            name: ssg-deployment-test
        - secretRef:
            name: ssg-deployment-test
        image: docker.io/caapim/gateway:11.2.1
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - echo Hello
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - echo Hello
        name: gateway
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 9443
          name: management
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - /opt/docker/rc.d/diagnostic/health_check.sh
          failureThreshold: 25
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - /opt/docker/rc.d/diagnostic/health_check.sh
          failureThreshold: 25
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          runAsGroup: 3000
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/conf/sample.properties
          name: config-override-secret
          subPath: sample.properties
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/license/license.xml
          name: gateway-license
          subPath: license.xml
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/services/graphman
          name: graphman
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/services/restman
          name: restman
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/ssg-deployment-test-listen-port-bundle
          name: ssg-deployment-test-listen-port-bundle
        - mountPath: /opt/docker/rc.d/003-parse-custom-files.sh
          name: ssg-deployment-test-parse-custom-files-script
          subPath: 003-parse-custom-files.sh
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/graphman/0
          name: ssg-deployment-test-repository-bundle-dest
        - mountPath: /graphman/config.json
          name: ssg-deployment-test-repository-init-config
          subPath: config.json
        - mountPath: /opt/docker/test.properties
          name: test-system-override
          subPath: test.properties
      dnsPolicy: ClusterFirst
      hostAliases:
      - hostnames:
        - dev.ca.com
        - dev1.ca.com
        ip: 0.0.0.0
      - hostnames:
        - example.ca.com
        ip: 127.0.0.1
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsUser: 1000
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 0
      tolerations:
      - effect: NoSchedule
        key: key1
        operator: Equal
        value: value1
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/name: ssg-deployment-test
        maxSkew: 2
        topologyKey: testTopology
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - name: config-override-secret
        secret:
          defaultMode: 444
          secretName: config-override-secret
      - name: gateway-license
        secret:
          defaultMode: 493
          items:
          - key: license.xml
            path: license.xml
          optional: false
          secretName: gateway-license
      - emptyDir: {}
        name: graphman
      - emptyDir: {}
        name: restman
      - configMap:
          defaultMode: 493
          name: ssg-deployment-test-listen-port-bundle
          optional: false
        name: ssg-deployment-test-listen-port-bundle
      - configMap:
          defaultMode: 493
          items:
          - key: 003-parse-custom-files
            path: 003-parse-custom-files.sh
          name: ssg-deployment-test-gateway-files
          optional: false
        name: ssg-deployment-test-parse-custom-files-script
      - emptyDir: {}
        name: ssg-deployment-test-repository-bundle-dest
      - configMap:
          defaultMode: 493
          name: ssg-deployment-test-repository-init-config
          optional: false
        name: ssg-deployment-test-repository-init-config
      - configMap:
          defaultMode: 444
          name: test-system-override
          optional: false
        name: test-system-override
