tests/e2e/gateway-deployment/01-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg-deployment-test
status:
  replicas: 2
  readyReplicas: 2
